# distillation-jax

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  _config.yml  index.md  phase1.md  project_plan.md  pyproject.toml
_layouts/: default.html
artifacts/: code_audit_2026-02-01.md  credibility_report.md
docs/: implementation_plan.md  phase1.md
examples/: basic_simulation.py  purejax_training.py  rl_training.py  setpoint_tracking.py  step_response.py  vectorized_sim.py
jax_distillation/: __init__.py
jax_distillation/column/: __init__.py  column.py  condenser.py  config.py  reboiler.py  tray.py
jax_distillation/core/: __init__.py  hydraulics.py  integration.py  thermodynamics.py  types.py
jax_distillation/env/: __init__.py  base_env.py  jax_env.py  rewards.py  spaces.py  wrappers.py
jax_distillation/utils/: __init__.py
jax_distillation/validation/: __init__.py  benchmarks.py  conservation.py  dynamic_response.py  steady_state.py
jax_distillation/validation_pack/: __init__.py
jax_distillation/validation_pack/benchmarks/: __init__.py
jax_distillation/validation_pack/data_sources/: __init__.py  checksums.py  download.py  licenses.md  registry.py
jax_distillation/validation_pack/fitting/: __init__.py  identifiability.py  parameter_estimation.py  reconciliation.py  reporting.py  state_estimation.py  units.py
jax_distillation/validation_pack/reports/: __init__.py  credibility_report.py
scripts/: build_credibility_report.py  download_public_benchmarks.py  run_fit_pipeline_demo.py  run_public_validation.py
tests/: __init__.py  test_column.py  test_env.py  test_hydraulics.py  test_jit_compilation.py  test_mass_balance_fix.py  test_reboiler_condenser.py  test_thermodynamics.py  test_tray.py  test_vmap.py
tests/validation_pack/: __init__.py  test_benchmark_cola.py  test_benchmark_wood_berry.py  test_debutanizer_delay_wrapper.py  test_fit_pipeline_smoke.py  test_nist_thermo.py  test_verification_convergence.py  test_verification_mass_energy.py
(+24 files in other folders)
